// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes child path of the app matches the snapshot on the rootpath 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/"
    onClick={[Function]}
  >
    +
  </a>
</div>
`;

exports[`Routes doesn't render the app everywhere 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/test/bauble.html/_appliance/"
    onClick={[Function]}
  >
    +
  </a>
</div>
`;

exports[`Routes matches the snapshot on the nested path 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/test/bauble.html"
    onClick={[Function]}
  >
    +
  </a>
  <div
    id="online_appointment"
  >
    <div
      className="ac-header"
    >
      <h3>
        Онлайн запись
      </h3>
    </div>
    <a
      className="main-link chosen"
      href="/test/bauble.html/_appliance/choose-center/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Изменить центр красоты
      </span>
      <span
        className="info-text"
      >
        Времена года
      </span>
    </a>
    <a
      className="main-link"
      href="/test/bauble.html/_appliance/choose-employee/"
      onClick={[Function]}
    >
      Выбрать сотрудника
    </a>
    <a
      className="main-link"
      href="/test/bauble.html/_appliance/choose-services/"
      onClick={[Function]}
    >
      Выбрать услуги
    </a>
    <a
      className="main-link"
      href="/test/bauble.html/_appliance/choose-datetime/"
      onClick={[Function]}
    >
      Выбрать дату и время
    </a>
    <div
      className="ac-footer coal"
    >
      <a
        className="footer-link my-account-link"
        href="/test/bauble.html/_appliance/"
        onClick={[Function]}
      >
        Личный кабинет
      </a>
    </div>
  </div>
</div>
`;

exports[`Routes matches the snapshot on the rootpath 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/"
    onClick={[Function]}
  >
    +
  </a>
  <div
    id="online_appointment"
  >
    <div
      className="ac-header"
    >
      <h3>
        Онлайн запись
      </h3>
    </div>
    <a
      className="main-link chosen"
      href="/_appliance/choose-center/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Изменить центр красоты
      </span>
      <span
        className="info-text"
      >
        Времена года
      </span>
    </a>
    <a
      className="main-link"
      href="/_appliance/choose-employee/"
      onClick={[Function]}
    >
      Выбрать сотрудника
    </a>
    <a
      className="main-link"
      href="/_appliance/choose-services/"
      onClick={[Function]}
    >
      Выбрать услуги
    </a>
    <a
      className="main-link"
      href="/_appliance/choose-datetime/"
      onClick={[Function]}
    >
      Выбрать дату и время
    </a>
    <div
      className="ac-footer coal"
    >
      <a
        className="footer-link my-account-link"
        href="/_appliance/"
        onClick={[Function]}
      >
        Личный кабинет
      </a>
    </div>
  </div>
</div>
`;
